@startuml

skinparam componentStyle uml2

class SPIFlash

class RobustFlashIndexes

class BaroSamples

class RotatingSamples

class DisplaySamples

class GraphSamples

class PermanentSamples

RobustFlashIndexes o-- SPIFlash
PermanentSamples o-- SPIFlash

RotatingSamples -left- "0..*" BaroSamples
RotatingSamples o-- RobustFlashIndexes
RotatingSamples ..> SPIFlash
PermanentSamples -up- "0..*" BaroSamples

DisplaySamples o-- RotatingSamples

GraphSamples --|> DisplaySamples

@enduml
